[gd_scene load_steps=8 format=3 uid="uid://bp5jtecacnla4"]

[ext_resource type="Script" uid="uid://qapl74j55mkf" path="res://scripts/death_screen.gd" id="1_531me"]
[ext_resource type="Shader" uid="uid://cb3mms08tbl4b" path="res://custom_shaders/noise_bg.gdshader" id="1_qemge"]
[ext_resource type="FontFile" uid="uid://dt7pnq7vqclll" path="res://Jersey10-Regular.ttf" id="2_lf77f"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lf77f"]
shader = ExtResource("1_qemge")
shader_parameter/scroll_speed = Vector2(3, 5)
shader_parameter/static_intensity = 0.25
shader_parameter/color = Color(0, 0, 0, 1)
shader_parameter/tex_scale = 3.0
shader_parameter/pixelation = 79.0

[sub_resource type="Animation" id="Animation_lf77f"]
resource_name = "start"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer2/RichTextLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer2/RichTextLabel3:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer/RichTextLabel2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Button:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.9, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_531me"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer2/RichTextLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer2/RichTextLabel3:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer/RichTextLabel2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Button:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4868a"]
_data = {
&"RESET": SubResource("Animation_531me"),
&"start": SubResource("Animation_lf77f")
}

[node name="Death" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_531me")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_lf77f")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 187.0
grow_horizontal = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer2"]
custom_minimum_size = Vector2(0, 226.545)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_lf77f")
theme_override_font_sizes/normal_font_size = 206
bbcode_enabled = true
text = "[wave][center]YOU ARE FIRED"

[node name="RichTextLabel3" type="RichTextLabel" parent="VBoxContainer2"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 183.69)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_lf77f")
theme_override_font_sizes/normal_font_size = 61
bbcode_enabled = true
text = "[center][wave]You lost to the fake doors. Look for doors with a line.ad"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 54.91
offset_bottom = 123.91
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 69.15)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_lf77f")
theme_override_font_sizes/normal_font_size = 61
bbcode_enabled = true
text = "[center]FINAL SCORE:"

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -118.5
offset_top = -151.34
offset_right = 118.5
offset_bottom = -58.34
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_lf77f")
theme_override_font_sizes/font_size = 66
text = "GET A NEW JOB"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4868a")
}
speed_scale = 0.3

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
